<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_waiting_for"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cons_layout_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_waiting_for" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_layout_timer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cons_layout_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_waiting_for">

        <com.example.sandtimer.SandTimerProgressBar
            android:id="@+id/image_sandtimer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:LidHeightRatio="0.1"
            app:MaxSeconds="100"
            app:ProgressSeconds="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar_minute"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="109dp"
            android:layout_height="109dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            android:max="60"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progressbar"
            android:progressTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text_minutes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/timer_not_set"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progressbar_minute"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_layout_buttons"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cons_layout_timer">

        <TextView
            android:id="@+id/text_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewPause"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_pause_code"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_set_code"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="1234"
            app:layout_constraintBottom_toTopOf="@+id/text_pause_code"
            app:layout_constraintEnd_toEndOf="@+id/text_pause_code"
            app:layout_constraintStart_toStartOf="@+id/text_pause_code"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_pause_code"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="4311"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_set_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_pause" />

        <Button
            android:id="@+id/button_set_1"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_set_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_pause_code"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="button_onclick" />

        <Button
            android:id="@+id/button_set_2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_set_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_set_1"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="button_onclick"/>

        <Button
            android:id="@+id/button_set_3"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_set_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_set_2"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="button_onclick"/>

        <Button
            android:id="@+id/button_set_4"
            android:layout_width="41dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_set_3"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="button_onclick"/>

        <TextView
            android:id="@+id/text_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_set"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toTopOf="@+id/text_pause"
            app:layout_constraintEnd_toStartOf="@+id/text_set_code"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/image_waiting_for"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>